# Yokoi_Game_-_Watch_emulator_3ds

./: .gitignore  BUILDING.md  Makefile  README.md  start_citra_emu.bat
CONVERT_ROM/: DEV_SCRIPTS.md  GNW_LIST.md  README.md  add_colour_codes.py  analyze_default_lay.py  convert_3ds.py  convert_original.py  external_apps_template.py  extract_games_from_mame.py  generate_games_path.py  requirements.txt
CONVERT_ROM/source/: ataka_asteroidov_game_processor.py  biathlon_game_processor.py  convert_svg.py  crab_grab_game_processor.py  diver_s_adventure_game_processor.py  extract_assets.py  game_cache.py  game_processor.py  games_path_utils.py  generate_games_path.py  hockey_game_processor.py  img_manipulation.py  kosmicheskiy_most_game_processor.py  kosmicheskiy_polyot_game_processor.py  manufacturer_ids.py  personalyze_games_path.py  space_adventure_game_processor.py  spider_tronica_game_processor.py  spitball_sparky_game_processor.py  target_profiles.py  timing.py
CONVERT_ROM/utils/: UTILS_SCRIPTS.md  extract_games_from_mame_dat.py
android/: build.gradle  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  yokoi_jni.cpp
android/app/src/main/cpp/core/: yokoi_app_flow.cpp  yokoi_app_flow.h  yokoi_app_modes.h  yokoi_audio.cpp  yokoi_audio.h  yokoi_cpu_utils.cpp  yokoi_cpu_utils.h  yokoi_emulation_thread.cpp  yokoi_emulation_thread.h  yokoi_game_loader.cpp  yokoi_game_loader.h  yokoi_layout.cpp  yokoi_layout.h  yokoi_menu_selection.cpp  yokoi_menu_selection.h  yokoi_runtime_state.cpp  yokoi_runtime_state.h  yokoi_segments_state.cpp  yokoi_segments_state.h
android/app/src/main/cpp/input/: yokoi_controller_state.cpp  yokoi_controller_state.h  yokoi_input_mapping.cpp  yokoi_input_mapping.h
android/app/src/main/cpp/jni/: yokoi_controller_jni.cpp  yokoi_jni.cpp  yokoi_jni_aliases.cpp  yokoi_settings_jni.cpp
android/app/src/main/cpp/render/: yokoi_gl.cpp  yokoi_gl.h
android/app/src/main/java/com/retrovalou/yokoi/: AppModes.java  MainActivity.java  RomPackImporter.java
android/app/src/main/java/com/retrovalou/yokoi/audio/: AudioDriver.java
android/app/src/main/java/com/retrovalou/yokoi/display/: SecondScreenController.java
android/app/src/main/java/com/retrovalou/yokoi/gl/: MenuUiTextureBuilder.java  TextureInfo.java  TextureLoader.java
android/app/src/main/java/com/retrovalou/yokoi/input/: ControllerBits.java  ControllerInputRouter.java
android/app/src/main/java/com/retrovalou/yokoi/input/overlay/: DpadView.java  OverlayControls.java
android/app/src/main/java/com/retrovalou/yokoi/nativebridge/: YokoiNative.java
android/app/src/main/java/com/retrovalou/yokoi/prefs/: AppPrefs.java
android/app/src/main/java/com/retrovalou/yokoi/ui/: SettingsMenu.java
android/app/src/main/res/values/: styles.xml
gfx/: noise.t3s
source/: main.cpp
source/SM5XX/: SM5XX.cpp  SM5XX.h
source/SM5XX/SM510/: SM510.cpp  SM510.h  SM510_savestate.cpp
source/SM5XX/SM511_SM512/: SM511_2.cpp  SM511_2.h  SM511_2_savestate.cpp
source/SM5XX/SM5A/: SM5A.cpp  SM5A.h  SM5A_instruction.cpp  SM5A_savestate.cpp
source/std/: GW_ALL.h  GW_ALL_rgds.h  GW_info_reader.h  debug_log.cpp  debug_log.h  gw_pack.cpp  gw_pack.h  load_file.cpp  platform_paths.cpp  platform_paths.h  savestate.cpp  savestate.h  settings.cpp  settings.h  timer.cpp
source/virtual_i_o/: 3ds_camera.cpp  3ds_camera.h  3ds_camera_lookup_table.h  3ds_input.cpp  3ds_input.h  3ds_screen.cpp  3ds_screen.h  README.md  texte_decoup.h  time_addresses.h  virtual_input.h
